tests/auto-vpa-generating-policy-daemonset/resources.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: shared
  namespace: test
spec:
  selector:
    matchLabels:
      app: node-agent
  template:
    metadata:
      labels:
        app: node-agent
    spec:
      containers:
        - name: node-agent
          image: registry.k8s.io/pause:3.10
